intel/bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/log.txt
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:29:28: error: use of undeclared identifier 'NULL'
    xmlNodePtr miscNode1 = NULL, miscNode2 = NULL;
                           ^
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:29:46: error: use of undeclared identifier 'NULL'
    xmlNodePtr miscNode1 = NULL, miscNode2 = NULL;
                                             ^
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:33:19: error: use of undeclared identifier 'NULL'
    if ((node1 == NULL) || (node2 == NULL))
                  ^
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:33:38: error: use of undeclared identifier 'NULL'
    if ((node1 == NULL) || (node2 == NULL))
                                     ^
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:73:25: error: use of undeclared identifier 'NULL'
            if (node1->prev != NULL) {
                               ^
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:80:26: error: use of undeclared identifier 'NULL'
                    if (node1->prev == NULL) {
                                       ^
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:94:20: error: use of undeclared identifier 'NULL'
            if ((node1 == NULL) || (node1->type != XML_ELEMENT_NODE) ||
                          ^
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:127:25: error: use of undeclared identifier 'NULL'
            if (node2->prev != NULL) {
                               ^
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:134:26: error: use of undeclared identifier 'NULL'
                    if (node2->prev == NULL) {
                                       ^
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:144:20: error: use of undeclared identifier 'NULL'
            if ((node2 == NULL) || (node2->type != XML_ELEMENT_NODE) ||
                          ^
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:166:17: error: use of undeclared identifier 'NULL'
                while (cur != NULL) {
                              ^
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:239:50: error: use of undeclared identifier 'NULL'
    for (depth2 = 0, cur = node2; cur->parent != NULL; cur = cur->parent) {
                                                 ^
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:245:50: error: use of undeclared identifier 'NULL'
    for (depth1 = 0, cur = node1; cur->parent != NULL; cur = cur->parent) {
                                                 ^
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:271:16: error: use of undeclared identifier 'NULL'
        if ((node1 == NULL) || (node2 == NULL))
                      ^
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:271:35: error: use of undeclared identifier 'NULL'
        if ((node1 == NULL) || (node2 == NULL))
                                         ^
bench_214_new/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:298:35: error: use of undeclared identifier 'NULL'
    for (cur = node1->next;cur != NULL;cur = cur->next)
                                  ^
16 errors generated.
HLS FPGA Parse FAILED.
